# wordshk_app

./: .gitignore  LICENSE  README.md  apple-app-site-association  assetlinks.json  audio_trim_silence.sh  build_rust.sh  generate_app_name.sh  generate_icons.sh  generate_jyutping_syllable_names.sh  l10n.yaml  normalize_audios.sh  parse_screenshots_from_log.py  privacy.md  process_audios.sh  pubspec.yaml  screenshots.md  screenshots.py  setup.sh
android/: build.gradle
assets/: cantonese_romanizations.tsv  cantonese_romanizations_test.tsv  english_index.json  english_index.rkyv  word_list.tsv
data/: filter_word_list.py
genai/: .gitignore  cantonese_phrase_translations.tsv  count_syllables.py  extract_cantonese_phrase_translations.py  fix_results.py  results.jsonl  sample_fixes.jsonl  translate_def.py  translate_def_prompt.json  translate_def_prompt_v1.json  translate_def_prompt_v2.json  verify_translate_def_results.py
graphics/: promotion_banner.ai  wordshk_logo.ai
hbl/: Cargo.toml  README.md  add_gloss_start_end.py  add_simplified.py  add_simplified_chars.py  download_audios.py  gen_examples_prompt.txt  gen_examples_prompt_v2.txt  gen_examples_prompt_v3.txt  get_story.py  minify_json.py  normalize_audio_loudness.py  pyproject.toml  upload_audios_to_cloudfare_r2.py  wrangler.toml
integration_test/: app_test.dart
ios/: Podfile
lib/: about_page.dart  app_config.dart  aws_service.dart  bridge_generated.dart  constants.dart  custom_page_route.dart  database.sql  device_info.dart  device_info.freezed.dart  device_info.g.dart  dict.dart  dictionary_license_page.dart  entry.dart  entry_banner.dart  entry_not_published_page.dart  entry_page.dart  expandable.dart  ffi.dart  main.dart  navigation_drawer.dart  powersync.dart  quality_control_page.dart  search_bar.dart  search_mode_button.dart  search_mode_radio_list_tile.dart  search_results_page.dart  smtp_credentials.dart  software_licenses_page.dart  supabase.dart  sync_rules.yml  utils.dart
rust/: .gitignore  Cargo.toml
rust/data/: english_index.json  english_index.rkyv
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  util.rs  utils.rs
rust/src/api/: api.rs  mod.rs  utils.rs
server/: .gitignore  README.md  app.py  requirements.txt  zappa_settings.json
test/: bookmarkedEntries.db  entry_test.dart  generate_test_dbs.py  (+1 more)
(+257 files in other folders)
