[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
wordshk_tools = { git = "https://github.com/AlienKevin/wordshk-tools.git", rev = "03e917e9ec519f2561558a62e7ddd436c97319d8" }
flutter_rust_bridge = "=2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.2"
openssl = { version = "*", features = ["vendored"] }
csv = "1.3.0"
once_cell = "1.19.0"
simplelog = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.5.5"
flate2 = "1.0.30"
itertools = "0.13.0"
#anyhow = { version = "1.0.79", features = ["backtrace"] }

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
debug = true

# Disable debug info for dependencies in release mode
[profile.release.package."*"]
debug = false
